--- a/api-reference/dynamic-rules/overview.mdx
+++ b/api-reference/dynamic-rules/overview.mdx
@@ -115,8 +115,7 @@ apikey: YOUR_API_KEY
 | Early Access | Preview feed for enterprise plans (requires `preview_rules` permission) |
 
 <Tip>
-  Subscribe to the `dynamic-rules.updated` webhook via the Account API to be
-  notified when OnlyFans changes the signing requirements.
+  Subscribe to the `rules.updated` webhook via the [Dashboard](https://ofauth.com/platform/settings) to be notified when OnlyFans changes the signing requirements.
 </Tip>
 
 ## Best Practices
