--- a/getting-started/choose-your-path.mdx
+++ b/getting-started/choose-your-path.mdx
@@ -157,7 +157,7 @@ $authUrl = json_decode($response, true)['url'];
 | Link | `https://api.ofauth.com/v2/link` | User authentication |
 | Access | `https://api.ofauth.com/v2/access` | Data access |
 | Connections | `https://api.ofauth.com/v2/connections` | Manage connections |
-| Account | `https://api.ofauth.com/v2/account` | Webhooks, platform info |
+| Account | `https://api.ofauth.com/v2/account` | Platform info |
 
 ---
 
@@ -265,7 +265,7 @@ Use **Dynamic Rules** to get signing parameters, then make requests directly to 
 </Accordion>
 
 <Accordion title="I just want to prototype quickly">
-Start with the **SDK** if you can use TypeScript, or the **REST API** with your favorite language. Both support our [Sandbox environment](/environments/sandbox) for testing.
+Start with the **SDK** if you can use TypeScript, or the **REST API** with your favorite language. Both support our [Sandbox environment](/getting-started/environments/sandbox) for testing.
 </Accordion>
 
 </AccordionGroup>
