--- a/getting-started/environments/sandbox.mdx
+++ b/getting-started/environments/sandbox.mdx
@@ -53,7 +53,7 @@ sasha@fan-otp.sandbox.com         // Fan with app OTP 123456
 ## Next Steps
 
 <CardGroup cols={3}>
-  <Card title="Environments Overview" icon="layers" href="/environments/overview">
+  <Card title="Environments Overview" icon="layers" href="/getting-started/environments/overview">
     Learn how environments are selected and differ
   </Card>
   <Card title="Link API" icon="link" href="/api-reference/link/overview">
@@ -63,3 +63,4 @@ sasha@fan-otp.sandbox.com         // Fan with app OTP 123456
     Query data using your connection ID
   </Card>
 </CardGroup>
+
