--- a/guides/link/embed.mdx
+++ b/guides/link/embed.mdx
@@ -49,7 +49,7 @@ OFAuth enforces where your Link iframe may be embedded using Content Security Po
 ### Troubleshooting
 
 - If the embed fails to appear or the browser console shows a CSP error mentioning `frame-ancestors`, add your site’s origin to Allowed Origins
-- If you see a “Link is misconfigured” screen, verify your dashboard’s Allowed Origins and your `successUrl`/`returnUrl` whitelists (see Hosted guide)
+- If you see a "Link is misconfigured" screen, verify your dashboard's Allowed Origins and Allowed Redirect URIs (see Hosted guide)
 
 ## Installation
 
