--- a/guides/link/overview.mdx
+++ b/guides/link/overview.mdx
@@ -1,9 +1,7 @@
 ---
-title: "Link Overview"
+title: "Overview"
 description: "Authentication solutions for OnlyFans integration"
 ---
-
-## Overview
 
 The Link API (`/v2/link`) centers on hosted authentication experiences that keep user credentials away from your infrastructure:
 
@@ -134,11 +132,11 @@ Security-sensitive behavior is controlled from your OFAuth dashboard:
 See the detailed guides for configuration steps:
 
 <CardGroup cols={2}>
-	<Card title="Allowed Origins" icon="shield-check" href="/guides/link/embed#security-allowed-origins-csp">
+	<Card title="Allowed Origins" icon="shield-check" href="/guides/link/embed#security:-allowed-origins-&-csp">
 		Configure trusted embed origins
 	</Card>
-	<Card title="Allowed Redirect URIs" icon="link" href="/guides/link/hosted#security-allowed-redirect-uris">
-		Whitelist success and cancel URLs
+	<Card title="Allowed Redirect URIs" icon="link" href="/guides/link/hosted#security:-allowed-redirect-uris">
+		Whitelist redirect URLs
 	</Card>
 </CardGroup>
 
