--- a/getting-started/environments/overview.mdx
+++ b/getting-started/environments/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Environments"
-description: "How Live and Sandbox environments work, how they’re selected, and what you can do in each."
+title: "Overview"
+description: "How Live and Sandbox environments work, how they're selected, and what you can do in each."
 ---
 
 ## Overview
@@ -38,7 +38,7 @@ OFAuth provides multiple environments so you can build safely and ship with conf
 - By API key: The simplest and recommended approach. The key prefix determines the environment automatically.
   - `sk_live_...` → Live
   - `sk_sandbox_...` → Sandbox
-- Explicit override (advanced): Some endpoints accept an `environmentType` option when initializing sessions (e.g., Link). If provided, it must match your key’s environment.
+- Explicit override (advanced): Some endpoints accept an `environmentType` option when initializing sessions (e.g., Link). If provided, it must match your key's environment.
 
 ## Feature Parity
 
@@ -49,10 +49,11 @@ All endpoints, behavior, and schemas are identical across environments. Sandbox 
 - Webhooks are simulated and mirror Live payloads for end-to-end testing
 
 <CardGroup cols={2}>
-  <Card title="Sandbox Credentials" icon="key" href="/environments/sandbox">
+  <Card title="Sandbox Credentials" icon="key" href="/getting-started/environments/sandbox">
     Ready-to-use test emails, passwords, and OTP
   </Card>
   <Card title="Access API" icon="key" href="/api-reference/access/overview">
     Managed and proxy endpoints work in Sandbox
   </Card>
 </CardGroup>
+
