--- a/guides/link/hosted.mdx
+++ b/guides/link/hosted.mdx
@@ -55,7 +55,7 @@ apikey: YOUR_API_KEY
 
 Create a new hosted authentication session.
 
-<Expandable title="POST /init">
+<Expandable title="POST /v2/link/init">
 
 ```http
 POST /v2/link/init
@@ -103,30 +103,49 @@ POST /v2/link/init
 
 ### Redirect Query Parameters
 
-After authentication completes, OFAuth redirects users to your URL with query parameters:
+After authentication completes, OFAuth redirects users to your URL with query parameters.
 
-| Outcome | Query Parameters |
-|---------|------------------|
-| Success | `?status=success&connection_id=conn_xxx&client_reference_id=...` |
-| Cancel | `?status=cancelled&step=login&client_reference_id=...` |
-| Error | `?status=error&error_code=session_expired&client_reference_id=...` |
+#### All Parameters
 
-**Status Values:**
-- `success`: Authentication completed, `connection_id` is available
-- `cancelled`: User exited the flow, `step` indicates where
-- `error`: Something went wrong, `error_code` provides details
+| Parameter | Type | Present | Description |
+|-----------|------|---------|-------------|
+| `status` | string | Always | `success`, `cancelled`, or `error` |
+| `connection_id` | string | On success | The connection ID to use with Access API |
+| `client_reference_id` | string | If provided | Your internal user identifier from `/init` |
+| `step` | string | On cancel | Where the user exited the flow |
+| `error_code` | string | On error | Machine-readable error identifier |
 
-**Step Values (for cancelled):**
-- `pre-login`: Before entering credentials
-- `authorization`: Reviewing permissions
-- `login`: During login
-- `2fa`: During two-factor authentication
+#### Status Values
+
+| Value | Meaning |
+|-------|---------|
+| `success` | Authentication completed, `connection_id` is available |
+| `cancelled` | User exited the flow, check `step` for where |
+| `error` | Something went wrong, check `error_code` |
+
+#### Step Values (when `status=cancelled`)
+
+| Value | Description |
+|-------|-------------|
+| `pre-login` | Before entering credentials |
+| `login` | During credential entry |
+| `2fa` | During two-factor authentication |
+| `authorization` | Reviewing permissions |
+
+#### Error Codes (when `status=error`)
+
+| Code | Description |
+|------|-------------|
+| `session_expired` | Link session expired (1 hour limit) |
+| `invalid_credentials` | User entered wrong credentials |
+| `account_locked` | OnlyFans account is locked |
+| `2fa_failed` | Two-factor authentication failed |
 
 ### Retrieve Session Status
 
 Check the current status of a hosted session.
 
-<Expandable title="GET /{clientSecret}">
+<Expandable title="GET /v2/link/{clientSecret}">
 
 ```http
 GET /v2/link/{clientSecret}
@@ -170,7 +189,7 @@ GET /v2/link/{clientSecret}
 
 Clean up a hosted session.
 
-<Expandable title="DELETE /{clientSecret}">
+<Expandable title="DELETE /v2/link/{clientSecret}">
 
 ```http
 DELETE /v2/link/{clientSecret}
